Part1/Exercise_1.09/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpong-service
spec:
  type: ClusterIP
  selector:
    app: pingpong
  ports:
    - port: 3032
      protocol: TCP
      targetPort: 3033
